--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.astalavista.saneesh.quizrrgame">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
             android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@mipmap/infinity"
             android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
+            android:roundIcon="@mipmap/infinity_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity android:name=".Activities.SplashScreen">
@@ -16,6 +18,12 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <meta-data
+                android:name="io.fabric.ApiKey"
+                android:value="475ee7d7c56492583485a47681c94fac5ff35c14"
+        />
+
         <activity
                 android:name=".Activities.GameActivity"
                 android:theme="@style/AppThemeNoToolbar">
@@ -23,7 +31,9 @@
         <activity android:name=".Activities.LoginScreen"/>
         <activity android:name=".Activities.MainActivity">
         </activity>
-        <activity android:name=".Activities.ScoreBoardActivity">
+        <activity android:name=".Activities.ScoreBoardActivity"
+        android:theme="@style/AppThemeNoToolbar"
+        >
         </activity>
         <activity android:name=".Activities.BaseActivity">
         </activity>
