--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,11 @@
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
 
-apply plugin: 'kotlin-android'
-
-apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.example.saneesh.quizrrgame"
+        applicationId "com.astalavista.saneesh.quizrrgame"
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
@@ -37,6 +35,11 @@ dependencies {
     implementation 'com.google.android.gms:play-services-ads:11.0.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
+    implementation 'com.github.florent37:shapeofview:1.3.2'
+
+    implementation('com.crashlytics.sdk.android:crashlytics:2.9.7@aar') {
+        transitive = true;
+    }
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
